; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_suminfo.c_msi_get_suminfo.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_suminfo.c_msi_get_suminfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@.str = private unnamed_addr constant [8 x i8] c"%p, %u\0A\00", align 1
@ERROR_OUTOFMEMORY = common dso_local global i64 0, align 8
@szSumInfo = common dso_local global i32 0, align 4
@STGM_READ = common dso_local global i32 0, align 4
@STGM_SHARE_EXCLUSIVE = common dso_local global i32 0, align 4
@ERROR_FUNCTION_FAILED = common dso_local global i64 0, align 8
@ERROR_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @msi_get_suminfo(i32* %0, i64 %1, %struct.TYPE_5__** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_5__**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.TYPE_5__** %2, %struct.TYPE_5__*** %7, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @TRACE(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* %12, i64 %13)
  %15 = load i32*, i32** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = call %struct.TYPE_5__* @create_suminfo(i32* %15, i64 %16)
  store %struct.TYPE_5__* %17, %struct.TYPE_5__** %9, align 8
  %18 = icmp ne %struct.TYPE_5__* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %3
  %20 = load i64, i64* @ERROR_OUTOFMEMORY, align 8
  store i64 %20, i64* %4, align 8
  br label %56

21:                                               ; preds = %3
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @szSumInfo, align 4
  %26 = load i32, i32* @STGM_READ, align 4
  %27 = load i32, i32* @STGM_SHARE_EXCLUSIVE, align 4
  %28 = or i32 %26, %27
  %29 = call i32 @IStorage_OpenStream(i32 %24, i32 %25, i32 0, i32 %28, i32 0, i32** %8)
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %10, align 4
  %31 = call i64 @FAILED(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %21
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = call i32 @msiobj_release(i32* %35)
  %37 = load i64, i64* @ERROR_FUNCTION_FAILED, align 8
  store i64 %37, i64* %4, align 8
  br label %56

38:                                               ; preds = %21
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %40 = load i32*, i32** %8, align 8
  %41 = call i64 @load_summary_info(%struct.TYPE_5__* %39, i32* %40)
  store i64 %41, i64* %11, align 8
  %42 = load i32*, i32** %8, align 8
  %43 = call i32 @IStream_Release(i32* %42)
  %44 = load i64, i64* %11, align 8
  %45 = load i64, i64* @ERROR_SUCCESS, align 8
  %46 = icmp ne i64 %44, %45
  br i1 %46, label %47, label %52

47:                                               ; preds = %38
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  %50 = call i32 @msiobj_release(i32* %49)
  %51 = load i64, i64* %11, align 8
  store i64 %51, i64* %4, align 8
  br label %56

52:                                               ; preds = %38
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %54 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %7, align 8
  store %struct.TYPE_5__* %53, %struct.TYPE_5__** %54, align 8
  %55 = load i64, i64* @ERROR_SUCCESS, align 8
  store i64 %55, i64* %4, align 8
  br label %56

56:                                               ; preds = %52, %47, %33, %19
  %57 = load i64, i64* %4, align 8
  ret i64 %57
}

declare dso_local i32 @TRACE(i8*, i32*, i64) #1

declare dso_local %struct.TYPE_5__* @create_suminfo(i32*, i64) #1

declare dso_local i32 @IStorage_OpenStream(i32, i32, i32, i32, i32, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @msiobj_release(i32*) #1

declare dso_local i64 @load_summary_info(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @IStream_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
